Closed Bug 337436 Opened 19 years ago Closed 19 years ago

Crash [@ nsGlobalWindow::Blur] when window gets destroyed during blur event

Categories

(Core :: DOM: UI Events & Focus Handling, defect)

x86
Windows XP
defect
Not set
critical

Tracking

()

VERIFIED FIXED

People

(Reporter: martijn.martijn, Assigned: smaug)

Details

(4 keywords)

Crash Data

Attachments

(4 files)

See upcoming testcase, which crashes Mozilla. Also crashes in Mozilla1.7.12. Talkback ID: TB18526416Q nsGlobalWindow::Blur XPTC_InvokeByIndex XPCWrappedNative::CallMethod
Component: DOM: Events → Event Handling
Summary: Crash when window gets destroyed during blur event → Crash [@ nsGlobalWindow::Blur] when window gets destroyed during blur event
Windows only?
I guess so (me guessing that you're using Linux).
Linux Firefox nightly 2006-05-12-12 crashes when you hit the back button on the testcase.
This testcase opens a window with <body onblur="self.close()">. If you close it with the X, Firefox crashes. However, talkback does not come up and (I think) the cache is not invalidated, so while it looks like the same bug I'm not certain.
I still can't reproduce the crash, using either of testcases. Martijn, dolphinling, does this work for you now?
No, testcase still crashes for me, using: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060719 Minefield/3.0a1 Talkback ID: TB21123036H nsGlobalWindow::Blur XPTC_InvokeByIndex XPCWrappedNative::CallMethod
Attached patch Null checkSplinter Review
Martijn, is this simple null check enough? If I read the code correctly, this null check does make sense.
Yeah, the Null check patch fixes the crash for me in my debug build.
Attachment #229832 - Flags: superreview?(jst)
Attachment #229832 - Flags: review?(jst)
Comment on attachment 229832 [details] [diff] [review] Null check r+sr=jst
Attachment #229832 - Flags: superreview?(jst)
Attachment #229832 - Flags: superreview+
Attachment #229832 - Flags: review?(jst)
Attachment #229832 - Flags: review+
Assignee: events → Olli.Pettay
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Attachment #229832 - Flags: approval1.8.1?
Attachment #229832 - Flags: approval1.8.0.6?
Comment on attachment 229832 [details] [diff] [review] Null check a=dbaron on behalf of drivers. Please check in to MOZILLA_1_8_BRANCH and mark fixed1.8.1 after doing so.
Attachment #229832 - Flags: approval1.8.1? → approval1.8.1+
Keywords: fixed1.8.1
Verified FIXED using build 2006-07-23-09 of Windows XP SeaMonkey trunk with both testcases; no crash.
Status: RESOLVED → VERIFIED
Comment on attachment 229832 [details] [diff] [review] Null check approved for 1.8.0 branch, a=dveditz for drivers
Attachment #229832 - Flags: approval1.8.0.7? → approval1.8.0.7+
Keywords: fixed1.8.0.7
Testcases do not cause crashes on branches. But I can verify that they _still don't crash. Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en-US; rv:1.8.1b2) Gecko/20060901 BonEcho/2.0b2 verified 1.8.1 Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en-US; rv:1.8.0.7) Gecko/20060906 Firefox/1.5.0.7 verified 1.8.0.7
Crash Signature: [@ nsGlobalWindow::Blur]
Component: Event Handling → User events and focus handling
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: