Bug 337436, Crash [@ nsGlobalWindow::Blur] when window gets destroyed during blur event, r+sr=jst